# JFG-ESP32-P4-Function-EV-Board-Spectrum-Analyzer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  ROADMAP.md  UserGuide.md  claude.md  instructions.md  sdkconfig.defaults  sdkconfig.esp32-p4-evboard
components/: README.md
components/display_ui/: CMakeLists.txt
components/display_ui/include/: display_ui.h
components/display_ui/src/: display_init.c  display_ui.c  screen_file_dialog.c  screen_file_dialog.h  screen_settings.c  screen_settings.h  screen_spectrum.c  screen_wifi.c  touch_gesture.c  touch_gesture.h
components/dsp_engine/: CMakeLists.txt
components/dsp_engine/include/: dsp_engine.h
components/dsp_engine/src/: calibration.c  calibration.h  dsp_engine.c
components/net_mgr/: CMakeLists.txt
components/net_mgr/include/: net_mgr.h
components/net_mgr/src/: net_mgr.c
components/settings_mgr/include/: settings_mgr.h
components/settings_mgr/src/: settings_mgr.c
components/web_server/: CMakeLists.txt
components/web_server/include/: web_server.h
components/web_server/src/: web_assets.c  web_assets.h  web_server.c
src/: CMakeLists.txt  idf_component.yml  main.c
tools/: gen_web_assets.py
web/: README.md  cal-upload.html  index.html  style.css  wifi-setup.html
